--- a/_sass/newsbits.scss
+++ b/_sass/newsbits.scss
@@ -7,6 +7,9 @@
         @include sidebar_component_internal_scroll(calc(100vh - 125px));
         div.entry {
             width: calc(100% - 5px);
+            &:first-child {
+                margin-top: 0px;
+            }
         }
     }
 }
